--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             <div class="certification">
                 <h3 class="title">Certification</h3>
                 <div class="certificate">
+                    <p class="item_pretitle">08/09/23</p>
+                    <h4 class="item_title">Introduction  to Front-End Development</h4>
+                    <p class="description">Course certificate provided by Meta</p>
+                </div>
+                <div class="certificate">
                     <p class="item_pretitle">22/03/23</p>
                     <h4 class="item_title">Code Fest 3.0</h4>
                     <p class="description">Certificate of participation in Code Fest 3.0</p>
@@ -65,7 +70,7 @@
                 <div class="certificate">
                     <p class="item_pretitle">27/07/23</p>
                     <h4 class="item_title">Python (Basic)</h4>
-                    <p class="description">Certificate of basic python knowledge from HackerRank</p>
+                    <p class="description">Certificate of basic python knowledge provided by HackerRank</p>
                 </div>
             </div>
         </div>
