--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div class="container">
         <div class="profile">
             <div class="profile_container">
-                <div class="profile_image">
-                    <img src="images/img.jpeg" alt="Manahil">
-                </div>
+                <!-- <div class="profile_image">
+                    <img src="img.jpeg" alt="Manahil">
+                </div> -->
                 <div>
                     <h1 class="profile_name">
                        <span class="first_name">Manahil</span>
                        <span class="last_name"> Iqbal</span> 
                     </h1>
                     <p class="profile_title">Software Developer</p>
-                    <p class="description">Year 2 CS student with expertise in C++ and Python along with basic knowledge of front end web development</p>
+                    <p class="description">A detail-oriented computer science student with a passion for problem-solving and a strong foundation in programming languages, seeking opportunities to contribute innovative solutions in software development</p>
                     <a class="download_button" href="resume.pdf" download="Resume.pdf">Download Resume</a>
                 </div>
             </div>
@@ -29,50 +29,37 @@
             <div class="skills">
                 <h3 class="title">Skills</h3>
                 <ul class="skills_list description">
-                    <li>Excellent working knowledge of C++</li>
-                    <li>Proficient working knowledge of Python</li>
-                    <li>Basics of web development in Html5 and CSS3</li>
-                    <li>Good programming knowledge in Assembly Language</li>
-                    <li>Exceptional problem solving skills</li>
+                    <li>Proficient in <b>C++</b>, with a strong grasp of <b>object-oriented programming</b> principles</li>
+                    <li>Excellent <b>problem-solving skills</b> and proficiency in <b>Data Structures and Algorithms</b> with extensive practice on platforms like LeetCode</li>
+                    <li>Solid understanding of <b>web development</b> technologies including <b>HTML and CSS</b>, with ongoing learning in <b>JavaScript</b></li>
+                    <li>Proficient in <b>Python</b>, with experience in developing various applications and scripts</li>
+                    <li>Excellent <b>communication skills</b> as well as <b>creativity</b> to develop innovative solutions to challenging problems</li>   
+                    <!-- <li>Quickly adapt to new technologies and methodologies, evidenced by rapid learning of new programming languages and frameworks</li> -->
                 </ul>
             </div>
             <div class="projects">
                 <h3 class="title">Projects</h3>
                 <div class="project-div">
-                    <h4 class="project_name">Inventory Management System using C++</h4>
-                    <p class="description">Designed for managing data of faculty, using concepts of functional programming in C++ along with concepts of file handling</p>
+                    <h4 class="project_name">InventoMate</h4>
+                    <p class="description">An inventory management system in C++ utilizing file handling techniques which allows users to add, update, delete, and display inventory items, ensuring efficient management of faculty inventories.</p>
                 </div>
                 <div class="project-div">
-                    <h4 class="project_name">Bank Management System using C++</h4>
-                    <p class="description">Designed for handling data of bank, using concepts of object-oriented programming in C++ along with concepts of file handling</p>
+                    <h4 class="project_name">WeatherWise</h4>
+                    <p class="description">A weather application using HTML, CSS, and JavaScript, integrating RapidAPI for real-time weather data which offers users instant access to accurate weather forecasts, enhancing planning and decision-making.</p>
                 </div>
                 <div class="project-div">
-                    <h4 class="project_name">Calculator with GUI using Python</h4>
-                    <p class="description">Basic calculator to perform basic mathematical operations,  designed using Tkinter</p>
+                    <h4 class="project_name">PyCalc</h4>
+                    <p class="description">A user-friendly calculator with a graphical user interface using Python's Tkinter library which offers basic arithmetic operations providing a seamless user experience for performing calculations.</p>
                 </div>
+                <!-- <div class="project-div">
+                    <h4 class="project_name">BankEasy</h4>
+                    <p class="description">"A robust bank management system in C++ employing object-oriented programming principles. This project facilitates seamless account management, including functionalities such as account creation, deposit, withdrawal and balance inquiry.</p>
+                </div> -->
                 <div class="project-div">
-                    <h4 class="project_name">Weather App using HTML, CSS and JS</h4>
-                    <p class="description">Web Application designed using HTML and CSS that uses rapid API to fetch relevant weather data</p>
-                </div>
-            </div>
-            <div class="certification">
-                <h3 class="title">Certification</h3>
-                <div class="certificate">
-                    <p class="item_pretitle">08/09/23</p>
-                    <h4 class="item_title">Introduction  to Front-End Development</h4>
-                    <p class="description">Course certificate provided by Meta</p>
-                </div>
-                <div class="certificate">
-                    <p class="item_pretitle">22/03/23</p>
-                    <h4 class="item_title">Code Fest 3.0</h4>
-                    <p class="description">Certificate of participation in Code Fest 3.0</p>
-                </div>
-                <div class="certificate">
-                    <p class="item_pretitle">27/07/23</p>
-                    <h4 class="item_title">Python (Basic)</h4>
-                    <p class="description">Certificate of basic python knowledge provided by HackerRank</p>
-                </div>
-            </div>
+                    <h4 class="project_name">Galactic Duel</h4>
+                    <p class="description">A minimalist 2-player space shooting game in Python using Pygame, featuring dynamic ship movement and projectile shooting mechanics. With its straightforward gameplay and focus on player interaction, this game delivers fast-paced excitement.</p>
+                </div>              
+            </div>   
         </div>
         <div class="right-side">
             <div class="education">
@@ -81,9 +68,9 @@
                     <p class="item_pretitle">2021 - present</p>
                     <h4 class="item_title">Bachelors in Computer Science</h4>
                     <p class="item_subtitle">Punjab University College of Information Technology </p>
-                    <p class="item_subtitle">CGPA 3.95</p>
+                    <p class="item_subtitle">CGPA 3.97</p>
                 </div>
-                <div class="edu_item">
+                <!-- <div class="edu_item">
                     <p class="item_pretitle">2019 - 2021</p>
                     <h4 class="item_title">FSC Pre-Medical</h4>
                     <p class="item_subtitle">Punjab Group of Colleges</p>
@@ -94,15 +81,38 @@
                     <h4 class="item_title">Matric</h4>
                     <p class="item_subtitle">Dar-e-Arqam School</p>
                     <p class="item_subtitle">1078/1100</p>
+                </div> -->
+            </div>
+            <div class="certification">
+                <h3 class="title">Certification</h3>
+                <div class="certificate">
+                    <p class="item_pretitle">08/09/23</p>
+                    <h4 class="item_title">Meta Introduction to Front-End Development</h4>
+                    <p class="description">Includes hands-on experience with HTML, CSS, and JavaScript, as well as an introduction to modern front-end frameworks and libraries</p>
+                </div>
+                <!-- <div class="certificate">
+                    <p class="item_pretitle">22/03/23</p>
+                    <h4 class="item_title">Code Fest 3.0</h4>
+                    <p class="description">Certificate of participation in Code Fest 3.0</p>
+                </div> -->
+                <div class="certificate">
+                    <p class="item_pretitle">01/10/23</p>
+                    <h4 class="item_title">HackerRank Problem Solving (Basic)</h4>
+                    <p class="description">Demonstrates proficiency in algorithmic problem-solving, data structures, and critical thinking</p>
+                </div>
+                <div class="certificate">
+                    <p class="item_pretitle">27/07/23</p>
+                    <h4 class="item_title">HackerRank Python (Basic)</h4>
+                    <p class="description">Recognizes the ability to solve complex programming problems efficiently and effectively</p>
                 </div>
             </div>
             <div class="achievements">
                 <h3 class="title">Achievements</h3>
                 <ul class="ach_item">
-                    <li>Got 98.00% marks in Matric and 99.45% marks in FSC</li>
-                    <li>Got Scholarship money from Punjab Government as well as my school</li>
-                    <li>Got 4.0 GPA in Programming Fundamentals, Object Oriented Programming and Computer Organization and Assembly Language</li>
-                    <li>Got merit based scholarship during my 2 years of college</li>
+                    <li>Achieved 98.00% marks in Matric and 99.45% marks in FSC</li>
+                    <li>Recieved Scholarship money from Punjab Government as well as my school</li>
+                    <li>Scored 4.0 GPA in Programming Fundamentals, Object Oriented Programming and Data Structures and Algorithms</li>
+                    <li>Received merit based scholarship during my 2 years of college</li>
                 </ul>
             </div>
             <div class="hobbies">
