--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Manahil Iqbal Resume</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
@@ -16,52 +16,16 @@
                 </div> -->
                 <div>
                     <h1 class="profile_name">
-                       <span class="first_name">Manahil</span>
-                       <span class="last_name"> Iqbal</span> 
+                       <!-- <span class="first_name">Manahil</span> -->
+                       <span class="last_name">Manahil Iqbal</span> 
                     </h1>
                     <p class="profile_title">Software Developer</p>
-                    <p class="description">A detail-oriented computer science student with a passion for problem-solving and a strong foundation in programming languages, seeking opportunities to contribute innovative solutions in software development</p>
-                    <a class="download_button" href="resume.pdf" download="Resume.pdf">Download Resume</a>
+                    <p class="description">A detail-oriented 3rd year computer science student with a passion for problem-solving and a strong foundation in programming, seeking opportunities to contribute innovative solutions in software development</p>
+                    <a class="download_button" href="./Manahil Iqbal Resume 2024.pdf" download="Manahil Iqbal Resume 2024.pdf">Download Resume</a>
                 </div>
             </div>
         </div>
         <div class="left-side">
-            <div class="skills">
-                <h3 class="title">Skills</h3>
-                <ul class="skills_list description">
-                    <li>Proficient in <b>C++</b>, with a strong grasp of <b>object-oriented programming</b> principles</li>
-                    <li>Excellent <b>problem-solving skills</b> and proficiency in <b>Data Structures and Algorithms</b> with extensive practice on platforms like LeetCode</li>
-                    <li>Solid understanding of <b>web development</b> technologies including <b>HTML and CSS</b>, with ongoing learning in <b>JavaScript</b></li>
-                    <li>Proficient in <b>Python</b>, with experience in developing various applications and scripts</li>
-                    <li>Excellent <b>communication skills</b> as well as <b>creativity</b> to develop innovative solutions to challenging problems</li>   
-                    <!-- <li>Quickly adapt to new technologies and methodologies, evidenced by rapid learning of new programming languages and frameworks</li> -->
-                </ul>
-            </div>
-            <div class="projects">
-                <h3 class="title">Projects</h3>
-                <div class="project-div">
-                    <h4 class="project_name">InventoMate</h4>
-                    <p class="description">An inventory management system in C++ utilizing file handling techniques which allows users to add, update, delete, and display inventory items, ensuring efficient management of faculty inventories.</p>
-                </div>
-                <div class="project-div">
-                    <h4 class="project_name">WeatherWise</h4>
-                    <p class="description">A weather application using HTML, CSS, and JavaScript, integrating RapidAPI for real-time weather data which offers users instant access to accurate weather forecasts, enhancing planning and decision-making.</p>
-                </div>
-                <div class="project-div">
-                    <h4 class="project_name">PyCalc</h4>
-                    <p class="description">A user-friendly calculator with a graphical user interface using Python's Tkinter library which offers basic arithmetic operations providing a seamless user experience for performing calculations.</p>
-                </div>
-                <!-- <div class="project-div">
-                    <h4 class="project_name">BankEasy</h4>
-                    <p class="description">"A robust bank management system in C++ employing object-oriented programming principles. This project facilitates seamless account management, including functionalities such as account creation, deposit, withdrawal and balance inquiry.</p>
-                </div> -->
-                <div class="project-div">
-                    <h4 class="project_name">Galactic Duel</h4>
-                    <p class="description">A minimalist 2-player space shooting game in Python using Pygame, featuring dynamic ship movement and projectile shooting mechanics. With its straightforward gameplay and focus on player interaction, this game delivers fast-paced excitement.</p>
-                </div>              
-            </div>   
-        </div>
-        <div class="right-side">
             <div class="education">
                 <h3 class="title">Education</h3>
                 <div class="edu_item">
@@ -83,12 +47,75 @@
                     <p class="item_subtitle">1078/1100</p>
                 </div> -->
             </div>
+            <div class="experience">
+                <h3 class="title">Experience</h3>
+                <div class="edu_item">
+                    <p class="item_pretitle">07/24 - present</p>
+                    <h4 class="item_title">Software Engineering Intern</h4>
+                    <p class="item_subtitle">IREG-IT</p>
+                    <p class="description">Serving as a Software Engineering Intern at IREG-IT, contributing as a full stack developer on key projects such as E-listener, VAST, and Mail Merge. Responsible for managing tasks from initial design to project completion, ensuring seamless integration and functionality.</p>
+                </div>
+                <div class="edu_item">
+                    <p class="item_pretitle">06/24 - present</p>
+                    <h4 class="item_title">Mern Stack Fellow</h4>
+                    <p class="item_subtitle">ByteWise Limited</p>
+                    <p class="description">Working as a MERN Stack Fellow at Bytewise Limited, mastering full stack development through immersive, hands-on projects. Actively learning and applying skills in the MERN stack to build comprehensive web applications.</p>
+                </div>
+                <div class="edu_item">    
+                    <p class="item_pretitle">09/23 - 06/24</p>            
+                    <h4 class="item_title">Teacher Assistant (TA)</h4>
+                    <p class="item_subtitle">Punjab University College of Information Technology</p>
+                    <p class="description">Assisted in Digital Logic Design Course and Lab, Applied Physics Course, and Calculus and Analytical Geometry Course at Punjab University, supporting students in gaining hands-on learning experiences.</p>             
+                </div>     
+            </div>
+            <div class="skills">
+                <h3 class="title">Skills</h3>
+                <ul class="skills_list description">
+                    <li><b>Programming Languages:</b> C++, Python, JavaScript</li>
+                    <li><b>Web Development:</b> HTML5, CSS3, JavaScript, Bootstrap</li>
+                    <li><b>Database Management:</b> SQL, Oracle</li>
+                    <li><b>Version Control:</b> Git, GitHub</li>
+                    <li><b>Operating Systems:</b> Linux, Windows</li>
+                    <li><b>Problem-Solving:</b> Analytical thinking, troubleshooting, debugging</li>
+                    <li><b>Communication:</b> Clear verbal and written communication, teamwork, collaboration</li>
+                </ul>
+            </div>
+        </div>
+        <div class="right-side">
+            <div class="projects">
+                <h3 class="title">Projects</h3>
+                <div class="project-div">
+                    <h4 class="item_title">InventoMate</h4>
+                    <p class="description">An inventory management system in C++ which allows users to add, update, delete, and display inventory items, ensuring efficient management of faculty inventories.</p>
+                </div>
+                <div class="project-div">
+                    <h4 class="item_title">WeatherWise</h4>
+                    <p class="description">A weather application using HTML, CSS, and JavaScript, integrating WeatherAPI for real-time weather data which offers users instant access to accurate weather forecasts.</p>
+                </div>
+                <div class="project-div">
+                    <h4 class="item_title">Memory Quest</h4>
+                    <p class="description">A fun memory game created with HTML, CSS, and vanilla JavaScript. Players flip cards to find matching pairs. With a sleek, responsive design, it offers an enjoyable experience on any device.</p>
+                </div>   
+                <div class="project-div">
+                    <h4 class="item_title">PyCalc</h4>
+                    <p class="description">A user-friendly calculator with a GUI using Python's Tkinter library which offers basic arithmetic operations providing a seamless user experience for performing calculations.</p>
+                </div>
+                <!-- <div class="project-div">
+                    <h4 class="project_name">BankEasy</h4>
+                    <p class="description">"A robust bank management system in C++ employing object-oriented programming principles. This project facilitates seamless account management, including functionalities such as account creation, deposit, withdrawal and balance inquiry.</p>
+                </div> -->
+                <!-- <div class="project-div">
+                    <h4 class="item_title">Galactic Duel</h4>
+                    <p class="description">A minimalist 2-player space shooting game in Python using Pygame, featuring dynamic ship movement and projectile shooting mechanics.</p>
+                </div>               -->
+            </div>   
             <div class="certification">
                 <h3 class="title">Certification</h3>
                 <div class="certificate">
-                    <p class="item_pretitle">08/09/23</p>
-                    <h4 class="item_title">Meta Introduction to Front-End Development</h4>
-                    <p class="description">Includes hands-on experience with HTML, CSS, and JavaScript, as well as an introduction to modern front-end frameworks and libraries</p>
+                    <p class="item_pretitle">09/23</p>
+                    <h4 class="item_title">Introduction to Front-End Development</h4>
+                    <p class="item_subtitle">Meta</p>
+                    <!-- <p class="description">Includes hands-on experience with HTML, CSS, and JavaScript, as well as an introduction to modern front-end frameworks and libraries</p> -->
                 </div>
                 <!-- <div class="certificate">
                     <p class="item_pretitle">22/03/23</p>
@@ -96,26 +123,44 @@
                     <p class="description">Certificate of participation in Code Fest 3.0</p>
                 </div> -->
                 <div class="certificate">
-                    <p class="item_pretitle">01/10/23</p>
-                    <h4 class="item_title">HackerRank Problem Solving (Basic)</h4>
-                    <p class="description">Demonstrates proficiency in algorithmic problem-solving, data structures, and critical thinking</p>
+                    <p class="item_pretitle">04/24</p>
+                    <h4 class="item_title">Intro to Machine Learning</h4>
+                    <p class="item_subtitle">Kaggle</p>
                 </div>
                 <div class="certificate">
+                    <p class="item_pretitle">04/24</p>
+                    <h4 class="item_title">Foundations of Cybersecurity</h4>
+                    <p class="item_subtitle">Google</p>
+                </div>
+                <!-- <div class="certificate">
+                    <p class="item_pretitle">06/24</p>
+                    <h4 class="item_title">Intermediate Javascript</h4>
+                    <p class="item_subtitle">Sololearn</p>
+                </div> -->
+                <!-- <div class="certificate">
+                    <p class="item_pretitle">02/24</p>
+                    <h4 class="item_title">What is Generative AI?</h4>
+                    <p class="item_subtitle">LinkedIn Learning</p>
+                     <p class="description">A brief course introducing the fundamentals of generative AI, focusing on content generation techniques using neural networks and deep learning.</p> 
+                </div> -->
+                <!-- <div class="certificate">
                     <p class="item_pretitle">27/07/23</p>
                     <h4 class="item_title">HackerRank Python (Basic)</h4>
                     <p class="description">Recognizes the ability to solve complex programming problems efficiently and effectively</p>
-                </div>
+                </div> -->
             </div>
             <div class="achievements">
                 <h3 class="title">Achievements</h3>
                 <ul class="ach_item">
-                    <li>Achieved 98.00% marks in Matric and 99.45% marks in FSC</li>
-                    <li>Recieved Scholarship money from Punjab Government as well as my school</li>
+                    <li>Ranked in the top 10 teams in CodeBees 2.0 Speed Programming Competition</li>
+                    <li>Ranked in the top 6 teams in CodeBees 3.0 Speed Programming Competition</li>
                     <li>Scored 4.0 GPA in Programming Fundamentals, Object Oriented Programming and Data Structures and Algorithms</li>
+                    <li>Achieved 98.00% marks in Matric and 99.45% marks in FSc</li>
+                    <!-- <li>Recieved Scholarship money from Punjab Government as well as my school</li> -->
                     <li>Received merit based scholarship during my 2 years of college</li>
                 </ul>
             </div>
-            <div class="hobbies">
+            <!-- <div class="hobbies">
                 <h3 class="title">Hobbies</h3>
                 <div class="hobbies_item">
                     <div class="hobby">
@@ -131,7 +176,7 @@
                         <span>Cooking</span>
                     </div>
                 </div>
-            </div>            
+            </div>             -->
         </div>
         <hr>
         <div class="bottom">
